more prototyping notebooks

--- a/notebooks/Denoising-Experiment.ipynb
+++ b/notebooks/Denoising-Experiment.ipynb
@@ -17,6 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from hover.core.neural import MultiVectorNet, VectorNet\n",
     "from hover.core.dataset import SupervisableTextDataset\n",
     "from hover.utils.datasets import newsgroups_dictl"
