Added basic testing for MultiVectorNet; made a fixture_module folder which holds the previous model_template and possibly more module-like fixtures

--- a/notebooks/Denoising-Experiment.ipynb
+++ b/notebooks/Denoising-Experiment.ipynb
@@ -89,10 +89,10 @@
     "\n",
     "model_modules = [\n",
     "    import_module(_m) for _m in [\n",
-    "        'model1',\n",
-    "        'model2',\n",
-    "        'model3',\n",
-    "        #'model4',\n",
+    "        'fixture_module.multi_vector_net.model1',\n",
+    "        'fixture_module.multi_vector_net.model2',\n",
+    "        'fixture_module.multi_vector_net.model3',\n",
+    "        #'tests.conf_module.model4',\n",
     "    ]\n",
     "]"
    ]
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "multinetA = MultiVectorNet([VectorNet.from_module(_m, all_labels) for _m in model_modules], verbose=1)\n",
-    "#multinetB = MultiVectorNet([VectorNet.from_module(_m, all_labels) for _m in model_modules], verbose=1)"
+    "multinetB = MultiVectorNet([VectorNet.from_module(_m, all_labels) for _m in model_modules], verbose=1)"
    ]
   },
   {
