--- a/notebooks/Denoising-Experiment.ipynb
+++ b/notebooks/Denoising-Experiment.ipynb
@@ -85,14 +85,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!ls ../fixture_module/*/*/*model.pt*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm ../fixture_module/*/*/*model.pt*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from importlib import import_module\n",
     "\n",
     "model_modules = [\n",
     "    import_module(_m) for _m in [\n",
-    "        'fixture_module.multi_vector_net.model1',\n",
+    "        #'fixture_module.multi_vector_net.model1',\n",
     "        'fixture_module.multi_vector_net.model2',\n",
+    "        'fixture_module.multi_vector_net.model1',\n",
     "        'fixture_module.multi_vector_net.model3',\n",
-    "        #'tests.conf_module.model4',\n",
+    "        'fixture_module.multi_vector_net.model4',\n",
     "    ]\n",
     "]"
    ]
@@ -103,8 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multinetA = MultiVectorNet([VectorNet.from_module(_m, all_labels) for _m in model_modules], verbose=1)\n",
-    "multinetB = MultiVectorNet([VectorNet.from_module(_m, all_labels) for _m in model_modules], verbose=1)"
+    "multi_a = MultiVectorNet([VectorNet.from_module(_m, all_labels) for _m in model_modules], verbose=10)\n",
+    "multi_b = MultiVectorNet([VectorNet.from_module(_m, all_labels) for _m in model_modules], verbose=10)"
    ]
   },
   {
@@ -113,35 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizers = [_net.vectorizer for _net in multinetA.vector_nets]\n",
-    "train_loader = dataset.loader('train', *vectorizers, smoothing_coeff=0.1, batch_size=128)\n",
-    "dev_loader = dataset.loader('dev', *vectorizers, smoothing_coeff=0.0, batch_size=128)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hover.utils.denoising import identity_adjacency, cyclic_except_last\n",
-    "\n",
-    "def get_params(warmup_epochs=5, coteach_epochs=10, forget_rate=0.3):\n",
-    "    for i in range(warmup_epochs):\n",
-    "        yield {\n",
-    "            \"forget_rate\": 0.0,\n",
-    "            \"optimizer\": [{\"lr\": 0.1, \"momentum\": 0.9}] * 4,\n",
-    "            \"adjacency_function\": identity_adjacency,\n",
-    "        }\n",
-    "    for i in range(coteach_epochs):\n",
-    "        yield {\n",
-    "            \"forget_rate\": forget_rate,\n",
-    "            \"optimizer\": [{\"lr\": 0.01, \"momentum\": 0.9}] * 4,\n",
-    "            \"adjacency_function\": cyclic_except_last,\n",
-    "        }\n",
-    "\n",
-    "paramsA = get_params(warmup_epochs=5, coteach_epochs=10, forget_rate=0.5)\n",
-    "paramsB = get_params(warmup_epochs=15, coteach_epochs=0, forget_rate=0.0)"
+    "vectorizers = [_net.vectorizer for _net in multi_a.vector_nets]\n",
+    "train_loader = dataset.loader('train', *vectorizers, smoothing_coeff=0.1, batch_size=256)\n",
+    "dev_loader = dataset.loader('dev', *vectorizers, smoothing_coeff=0.0, batch_size=256)"
    ]
   },
   {
@@ -156,11 +149,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "multinetA.train(train_loader, paramsA, dev_loader=dev_loader)\n",
-    "multinetA.evaluate_ensemble(dev_loader)"
+    "kwargs_a = dict(\n",
+    "    warmup_epochs=40,\n",
+    "    warmup_noise=0.0,\n",
+    "    warmup_lr=0.05,\n",
+    "    warmup_momentum=0.9,\n",
+    "    postwm_epochs=40,\n",
+    "    postwm_noise=0.5,\n",
+    "    postwm_lr=0.01,\n",
+    "    postwm_momentum=0.7,\n",
+    ")\n",
+    "kwargs_b = dict(\n",
+    "    warmup_epochs=40,\n",
+    "    warmup_noise=0.0,\n",
+    "    warmup_lr=0.05,\n",
+    "    warmup_momentum=0.9,\n",
+    "    postwm_epochs=40,\n",
+    "    postwm_noise=0.0,\n",
+    "    postwm_lr=0.01,\n",
+    "    postwm_momentum=0.7,\n",
+    ")\n",
+    "\n",
+    "# train both MultiVectorNets\n",
+    "train_info_a = multi_a.train(train_loader, dev_loader=dev_loader, **kwargs_a)"
    ]
   },
   {
@@ -169,8 +185,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multinetB.train(train_loader, paramsB, dev_loader=dev_loader)\n",
-    "multinetB.evaluate_ensemble(dev_loader)"
+    "train_info_b = multi_b.train(train_loader, dev_loader=dev_loader, **kwargs_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_a.evaluate_ensemble(dev_loader)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_b.evaluate_ensemble(dev_loader)[0]"
    ]
   },
   {
@@ -183,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
