--- a/notebooks/Prototyping.ipynb
+++ b/notebooks/Prototyping.ipynb
@@ -182,14 +182,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bokeh.models import Selection, RangeSlider, Button\n",
-    "from bokeh.layouts import row\n",
+    "from bokeh.models import Selection, RangeSlider, Button, Dropdown\n",
+    "from bokeh.layouts import row, column\n",
+    "from bokeh.io import output_notebook, show\n",
+    "from hover.utils.bokeh_helper import servable\n",
+    "\n",
+    "output_notebook()\n",
     "\n",
     "slider = RangeSlider(start=-1.0, end=1.0, value=(-0.5, 0.5), step=0.01)\n",
     "slider.on_change(\"value\", lambda attr, old, new: print(f\"Range changed to {slider.value}\"))\n",
     "\n",
-    "button = Button(label=\"Click Me\")\n",
-    "button.on_click(lambda event: print(f\"Button Clicked!\"))"
+    "@servable()\n",
+    "def burner():\n",
+    "    arr = ['1', '2', '3']\n",
+    "    dropdown = Dropdown(\n",
+    "        label=\"Select Element\",\n",
+    "        button_type=\"primary\",\n",
+    "        menu=arr,\n",
+    "    )\n",
+    "    \n",
+    "    button = Button(label=\"Click Me\", height=100)\n",
+    "    def button_callcack(event):\n",
+    "        dropdown.menu.append(str(int(dropdown.menu[-1]) + 1))\n",
+    "        print(f\"Button Clicked! Expected menu: {arr}\")\n",
+    "        print(f\"Got menu: {dropdown.menu}\")\n",
+    "    button.on_click(button_callcack)\n",
+    "\n",
+    "    return column(dropdown, button)\n",
+    "\n",
+    "handle = burner()\n",
+    "show(handle)"
    ]
   },
   {
@@ -201,15 +223,6 @@
     "from bokeh.events import ButtonClick, MenuItemClick\n",
     "\n",
     "button_click = ButtonClick(button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{1, 2}.issubset({1, 2})"
    ]
   },
   {
@@ -270,43 +283,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "arr = np.array(range(100))\n",
-    "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame({'foo': [1, 2], 'bar': [3, 4]})\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.at[0, 'foo'] = 5\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(range(20))[slice(10)]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -318,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
