--- a/notebooks/Testing.ipynb
+++ b/notebooks/Testing.ipynb
@@ -248,20 +248,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hover.core.neural import VectorNet\n",
+    "from hover.core.neural import VectorNet, MultiVectorNet\n",
     "from hover.utils.common_nn import MLP, LogisticRegression\n",
     "\n",
-    "def vecnet_callback(dataset, vectorizer):\n",
+    "def vecnet_callback(dataset):\n",
     "    \"\"\"\n",
     "    Create a model with vectorizer-NN architecture.\n",
     "    \"\"\"\n",
-    "    # model.pt will point to a PyTorch state dict (to be created)\n",
-    "    # which gets cumulatively updated when we train the model\n",
-    "    #vecnet = VectorNet(vectorizer, MLP, \"MLP.pt\", dataset.classes)\n",
-    "    vecnet = VectorNet(vectorizer, LogisticRegression, \"LR.pt\", dataset.classes)\n",
-    "    return vecnet\n",
+    "    vecnets = [\n",
+    "        VectorNet(vectorizer, LogisticRegression, \"LR1.pt\", dataset.classes),\n",
+    "        VectorNet(vectorizer, LogisticRegression, \"LR2.pt\", dataset.classes),\n",
+    "    ]\n",
+    "    #return MultiVectorNet(vecnets)\n",
+    "    return vecnets[0]\n",
     "\n",
-    "vecnet = vecnet_callback(dataset, vectorizer)\n",
+    "vecnet = vecnet_callback(dataset)\n",
     "\n",
     "# predict_proba accepts individual strings or list\n",
     "# text -> vector -> class probabilities\n",
@@ -278,7 +279,7 @@
     "from hover.recipes.experimental import active_learning\n",
     "from bokeh.io import show, output_notebook\n",
     "\n",
-    "handle = active_learning(dataset.copy(), vectorizer, vecnet_callback)\n",
+    "handle = active_learning(dataset.copy(), vecnet_callback)\n",
     "\n",
     "output_notebook()\n",
     "show(handle)"
@@ -343,7 +344,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -357,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
