Sync test notebook changes

--- a/notebooks/Testing.ipynb
+++ b/notebooks/Testing.ipynb
@@ -97,28 +97,35 @@
     "data = dict(\n",
     "    cola=[randint(0, 100) for i in range(10)],\n",
     "    colb=Category10[10],\n",
-    "    colc=['&#9608;' for i in range(10)]\n",
+    "    colc=[\"https://docs.chainer.org/en/stable/_images/5.png\" for i in range(10)],\n",
+    "    cold=[\"https://www.soundjay.com/buttons/beep-02.mp3\" for i in range(10)],\n",
     ")\n",
     "\n",
     "source = ColumnDataSource(data)\n",
     "\n",
-    "template=\"\"\"                \n",
+    "color_formatter=HTMLTemplateFormatter(template=\"\"\"                \n",
     "            <p style=\"color:<%= colb %>;\"> \n",
-    "                <%= \"&#9608;\" + value %>\n",
-    "            </p>\n",
-    "            \"\"\"\n",
-    "formatter =  HTMLTemplateFormatter(template=template)\n",
+    "                <%= \"&#9608;&#9608;&#9608;\" + value %> &#128512;\n",
+    "                \n",
+    "            </p> \n",
+    "            \"\"\")\n",
+    "image_formatter = HTMLTemplateFormatter(template=\"\"\"\n",
+    "<img src=<%= value %>>\n",
+    "\"\"\")\n",
+    "audio_formatter = HTMLTemplateFormatter(template=\"\"\"\n",
+    "<audio controls preload=\"auto\" src=<%= value %>></audio>\n",
+    "\"\"\")\n",
     "\n",
-    "columns = [TableColumn(field=\"cola\", title=\"CL1\", width = 100),\n",
-    "           TableColumn(field='colb', title='CL2', formatter=formatter, width = 100),\n",
-    "           TableColumn(field='colc', title='CL3', formatter=formatter, width = 5)\n",
+    "formatter1 = HTMLTemplateFormatter(template=template1)\n",
+    "formatter2 = HTMLTemplateFormatter(template=template2)\n",
+    "columns = [TableColumn(field=\"cola\", title=\"CL1\", width=50),\n",
+    "           TableColumn(field='colb', title='CL2', formatter=color_formatter, width=100),\n",
+    "           TableColumn(field='colc', title='CL3', formatter=image_formatter, width=200),\n",
+    "           TableColumn(field='cold', title='CL4', formatter=audio_formatter, width=50),\n",
     "          ]\n",
     "data_table = DataTable(source=source,\n",
     "                       columns=columns,\n",
-    "                       fit_columns=True,\n",
-    "                       selectable = True,\n",
-    "                       sortable = True,\n",
-    "                       width=400,height=400)\n",
+    "                       width=500, row_height=200)\n",
     "\n",
     "show(data_table)"
    ]
@@ -181,7 +188,7 @@
     "\n",
     "dataset = SupervisableTextDataset(\n",
     "    # raw data which do not have labels\n",
-    "    raw_dictl=[random_raw_data() for i in range(3000)],\n",
+    "    raw_dictl=[random_raw_data() for i in range(2000)],\n",
     "    # train / dev / test sets are optional\n",
     "    #train_dictl=[],\n",
     "    train_dictl=[random_labeled_data() for i in range(500)],\n",
@@ -226,7 +233,8 @@
     "# any kwargs will be passed onto the corresponding reduction\n",
     "# for umap: https://umap-learn.readthedocs.io/en/latest/parameters.html\n",
     "# for ivis: https://bering-ivis.readthedocs.io/en/latest/api.html\n",
-    "dataset.compute_2d_embedding(vectorizer, \"umap\")\n",
+    "dataset.compute_nd_embedding(vectorizer, \"umap\", dimension=4)\n",
+    "dataset.compute_nd_embedding(vectorizer, \"umap\", dimension=3)\n",
     "\n",
     "# What we did adds 'x' and 'y' columns to the DataFrames in dataset.dfs\n",
     "# One could alternatively pre-compute these columns using any approach\n",
@@ -248,21 +256,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hover.core.neural import VectorNet, MultiVectorNet\n",
+    "from hover.core.neural import VectorNet\n",
     "from hover.utils.common_nn import MLP, LogisticRegression\n",
     "\n",
-    "def vecnet_callback(dataset):\n",
-    "    \"\"\"\n",
-    "    Create a model with vectorizer-NN architecture.\n",
-    "    \"\"\"\n",
-    "    vecnets = [\n",
-    "        VectorNet(vectorizer, LogisticRegression, \"LR1.pt\", dataset.classes),\n",
-    "        VectorNet(vectorizer, LogisticRegression, \"LR2.pt\", dataset.classes),\n",
-    "    ]\n",
-    "    #return MultiVectorNet(vecnets)\n",
-    "    return vecnets[0]\n",
-    "\n",
-    "vecnet = vecnet_callback(dataset)\n",
+    "vecnet = VectorNet(vectorizer, MLP, \"LR1.pt\", dataset.classes)\n",
     "\n",
     "# predict_proba accepts individual strings or list\n",
     "# text -> vector -> class probabilities\n",
@@ -278,8 +275,11 @@
    "source": [
     "from hover.recipes.experimental import active_learning\n",
     "from bokeh.io import show, output_notebook\n",
+    "from hover.utils.bokeh_helper import bokeh_hover_tooltip\n",
     "\n",
-    "handle = active_learning(dataset.copy(), vecnet_callback)\n",
+    "handle = active_learning(\n",
+    "    dataset.copy(), vecnet,\n",
+    ")\n",
     "\n",
     "output_notebook()\n",
     "show(handle)"
@@ -291,48 +291,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "arr = np.array([1, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bokeh.models import Slider\n",
-    "from hover.utils.bokeh_helper import servable\n",
-    "\n",
-    "@servable()\n",
-    "def burner():\n",
-    "    slider = Slider(start=0, end=10, value=0, step=1)\n",
-    "    \n",
-    "    def callback(attr, old, new):\n",
-    "        slider.end = new + 1\n",
-    "    \n",
-    "    slider.on_change('value', callback)\n",
-    "    return slider\n",
-    "\n",
-    "burner_handle = burner()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show(burner_handle)"
-   ]
   },
   {
    "cell_type": "code",
